@@ -2334,6 +2334,9 @@
 	"dellogpage": "Deletion log",
 	"dellogpagetext": "Below is a list of the most recent deletions.",
 	"deletionlog": "deletion log",
+	"log-name-create": "Creation log",
+	"log-description-create": "Below is a list of the most recent page creations.",
+	"logentry-create-create": "$1 {{GENDER:$2|created}} page $3",
 	"reverted": "Reverted to earlier revision",
 	"deletecomment": "Reason:",
 	"deleteotherreason": "Other/additional reason:",
