@@ -2532,6 +2532,9 @@
 	"dellogpage": "{{doc-logpage}}\n\nThe name of the deletion log. Used as heading on [[Special:Log/delete]] and in the drop down menu for selecting logs on [[Special:Log]].\n{{Identical|Deletion log}}",
 	"dellogpagetext": "Text in [[Special:Log/delete]].",
 	"deletionlog": "Used as text for the link which points to the deletion log:\n* Used as <code>$1</code> in {{msg-mw|Filewasdeleted}}\n* Used as <code>$2</code> in {{msg-mw|Deletedtext}}\n* Used in log lines on [[Special:DeletedContributions]]\n{{Identical|Deletion log}}",
+	"log-name-create": "{{doc-logpage}}\n\nThe name of the page creation log. Used as heading on [[Special:Log/create]] and in the drop down menu for selecting logs on [[Special:Log]].",
+	"log-description-create": "Text in [[Special:Log/create]].",
+	"logentry-create-create": "{{Logentry|[[Special:Log/create]]}}",
 	"reverted": "{{Identical|Revert}}",
 	"deletecomment": "{{Identical|Reason}}",
 	"deleteotherreason": "{{Identical|Other/additional reason}}",
